# materl

./: .gitignore  .gitmodules  ENHANCEMENT_ROADMAP.md  README.md  main.py  pyproject.toml  test_backends.py
.cursor/: code.mdc
docs/: GRAPH_FIRST_PRINCIPLES.md  MAX_BACKEND_TRAINING.md  USER_EXPERIENCE_ENHANCEMENTS.md  VISION.md
examples/: README.md  backend_comparison.py  graph_first_principles.py  max_training_example.py  run_dapo.py  run_declarative_grpo.py  run_grpo_scaffold_test.py  run_kimi_reinforce.py  run_reinforce.py  run_vapo.py  simple_dapo.py  simple_grpo.py  simple_kimi_reinforce.py  simple_reinforce.py  simple_usage.py  simple_vapo.py  train_dapo_materl.py  train_grpo_materl.py  train_vapo_materl.py
materl/: __init__.py  agents.py  algorithm.py  compiler.py  decorators.py  graph.py  logging.py  ops.py
materl/config/: __init__.py  dapo_config.py  generation_config.py  grpo_config.py  reinforce_config.py  reward_config.py  training_config.py  vapo_config.py
materl/functions/: _graph_generation.py  adapters.py  advantages.py  generation.py  logprobs.py  loss.py  masks.py  rewards.py  step.py  values.py
materl/kernels/: gae.mojo
materl/recipes/: __init__.py  builder.py  dapo.py  decorator.py  grpo.py  kimi_reinforce.py  reinforce.py  steps.py  vapo.py
materl/tests/python/engine/: .gitkeep
materl/utils/: __init__.py
tests/mojo/loss_functions/: .gitkeep
tests/mojo/rewards/: .gitkeep
tests/python/trainers/: .gitkeep
